objects/Etat__c.object
<CustomObject>
    <fields>
        <fullName>Code_Etat__c</fullName>
        <externalId>true</externalId>
        <label>Code Etat</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_pays__c</fullName>
        <label>Code pays</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x18caracter__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x18caracter</label>
        <type>Text</type>
    </fields>
    <label>Etat</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <listViews>
        <fullName>Liste_des_Etats_CANADA</fullName>
        <columns>Code_Etat__c</columns>
        <columns>NAME</columns>
        <columns>Code_pays__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_pays__c</field>
            <operation>contains</operation>
            <value>CAN</value>
        </filters>
        <label>Liste des Etats - CANADA</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Liste_des_Etats_USA</fullName>
        <columns>Code_Etat__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_pays__c</field>
            <operation>contains</operation>
            <value>USA</value>
        </filters>
        <label>Liste des Etats - USA</label>
    </listViews>
    <nameField>
        <label>Nom de Etat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>